--- a/css/app.css
+++ b/css/app.css
@@ -24,3 +24,140 @@ img {
     max-width: 100%;
 }
 
+[class*="container"] {
+    width: 95%;
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+.header {
+    padding: 5rem 0;
+    background-image: linear-gradient(to right, rgb(0 0 0 / 0.7), rgb(0 0 0 / 0.7)), url(../img/header.jpg);
+    background-size: cover;
+    background-position: 50%;
+    position: relative;
+}
+
+.header__guitar {
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .header__guitar {
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        animation: 1s ease-in-out 0s 1 showImage;
+    }
+}
+
+@keyframes showImage {
+    0% {
+        opacity: 0;
+        transform: translateX(-10rem);
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.header__bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .header__bar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+
+.header__logo {
+    width: 30rem;
+}
+
+.navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 5rem;
+    position: relative;
+    z-index: 1;
+}
+
+@media (min-width: 768px) {
+    .navigation {
+        flex-direction: row;
+        margin-top: 0;
+    }
+}
+
+.navigation__link {
+    color: var(--white);
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    transition: background-color 300ms;
+}
+
+.navigation__link:hover {
+    background-color: var(--primary);
+}
+
+.model {
+    margin-top: 5rem;
+    text-align: center;
+    color: var(--white);
+}
+
+@media (min-width: 768px) {
+    .model {
+        text-align: left;
+        width: 50%;
+    }
+}
+
+.model__name {
+    font-size: 7rem;
+}
+
+@media (min-width: 768px) {
+    .model__name {
+        font-size: 8rem;
+    }
+}
+
+.model__price {
+    font-size: 6rem;
+    color: var(--primary);
+    font-weight: 900;
+    line-height: 0;
+}
+
+.model__link {
+    margin-top: 2rem;
+    text-decoration: none;
+    padding: 1rem 5rem;
+    border: 2px solid var(--primary);
+    color: var(--white);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 700;
+    transition: background-color 300ms;
+}
+
+.model__link:hover {
+    background-color: var(--primary);
+}
