--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+/* Globals */
 :root {
     --primary: #e99401;
     --black: #262626;
@@ -24,11 +25,22 @@ img {
     max-width: 100%;
 }
 
-[class*="container"] {
+/* Utilities */
+.container {
     width: 95%;
     max-width: 120rem;
     margin: 0 auto;
 }
+
+[class$="__heading"] {
+    font-size: 4rem;
+    text-align: center;
+    font-weight: 900;
+    color: var(--primary);
+    margin: 5rem 0;
+}
+
+/* Header */
 
 .header {
     padding: 5rem 0;
@@ -160,4 +172,224 @@ img {
 
 .model__link:hover {
     background-color: var(--primary);
+}
+
+/* Products */
+.products__grid {
+    display: grid;
+    gap: 4rem;
+}
+
+@media (min-width: 768px) {
+    .products__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 992px) {
+    .products__grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.product {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    column-gap: 1rem;
+    align-items: center;
+}
+
+.product__name {
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+.product__description {
+    font-size: 1.6rem;
+}
+
+.product__price {
+    color: var(--primary);
+    font-size: 6rem;
+    font-weight: 900;
+    margin: 0;
+}
+
+.product__link {
+    margin-top: 2rem;
+    display: block;
+    text-decoration: none;
+    color: var(--black);
+    padding: 1rem 5rem;
+    border:  2px solid var(--primary);
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    transition: background-color 300ms;
+}
+
+.product__link:hover {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+/* Courses */
+.courses {
+    padding: 10rem 0;
+    margin-top: 10rem;
+    background-image: linear-gradient(to right, rgb( 0 0 0 / 0.65), rgb( 0 0 0 / 0.65)), url(../img/courses_bg.jpg);
+    background-size: cover;
+    background-position: 50%;
+}
+
+@media (min-width: 768px) {
+    .courses__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.courses__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .courses__content {
+        grid-column: 2 / 3;
+    }
+}
+
+.courses__text {
+    color: var(--white);
+    text-align: center;
+    font-size: 2.4rem;
+}
+
+.courses__link {
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--white);
+    border:  2px solid var(--primary);
+    display: inline-block;
+    margin-top: 2rem;
+    padding: 1rem 5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    transition: background-color 300ms;
+}
+
+.courses__link:hover {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+/* Blog */
+.blog__grid {
+    display: grid;
+    gap: 4rem;
+}
+
+@media (min-width: 768px) {
+    .blog__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 992px) {
+    .blog__grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.entry__content {
+    padding: 2rem;
+}
+
+.entry__title {
+    margin: 0;
+    font-weight: 400;
+    font-size: 2.8rem;
+    line-height: 1.2;
+}
+
+.entry__date {
+    font-size: 1.6rem;
+    color: var(--primary);
+}
+
+.entry__text {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow: hidden;
+    font-size: 1.6rem;
+}
+
+.entry__link {
+    margin-top: 2rem;
+    display: block;
+    text-decoration: none;
+    color: var(--black);
+    padding: 1rem 5rem;
+    border:  2px solid var(--primary);
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    transition: background-color 300ms;
+}
+
+.entry__link:hover {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+/* Footer */
+.footer {
+    margin-top: 5rem;
+    background-color: var(--black);
+    padding: 5rem 0;
+}
+
+@media (min-width: 768px) {
+    .footer__content {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.footer__navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .footer__navigation {
+        flex-direction: row;
+        gap: 2rem;
+    }
+}
+
+.footer__link,
+.footer__copyright {
+    font-size: 2.8rem;
+    color: var(--white);
+}
+
+.footer__link {
+    text-decoration: none;
+}
+
+.footer__link:hover {
+    color: var(--primary);
+}
+
+.footer__copyright {
+    text-align: center;
 }
